<package format="3">
  <name>hsrb_moveit</name>
  <version>2.1.0</version>
  <description>Configuration for operating MoveIt with HSRB</description>
  <maintainer email="xr-hsr-support@mail.toyota.co.jp">HSR Support</maintainer>
  <license>BSD 3-clause Clear License</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>hsrb_moveit_config</exec_depend>
  <exec_depend>hsrb_moveit_plugins</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>